# SimpleSoftRenderer

./: Buffer.cpp  Buffer.h  CMakeLists.txt  README.md  main.cpp
includes/: Buffer.h  Camera.h  Color.h  Light.h  Material.cpp  Material.h  Matrix.h  Mesh.h  Object.h  Rectangle.h  Transform.h  Triangle.h  Vector.h  Vertex.h  obj_reader.h  shader_geometry.h  shader_render.h  shader_transform.h
src/: Buffer.cpp  Camera.cpp  Color.cpp  Light.cpp  Matrix.cpp  Mesh.cpp  Object.cpp  README.md  Rectangle.cpp  Transform.cpp  Triangle.cpp  Vector.cpp  Vertex.cpp  obj_reader.cpp  shader_geometry.cpp  shader_render.cpp  shader_transform.cpp
